tests/fixtures/invalid/set_bitxor_str.py
# Cannot bitwise XOR Set[int] and Str
x: set[int] = {1, 2, 3} ^ "hello"
